--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <nav class="navegador">
             <!--Logo-->
             <div class="logo">
-                <div class="afull">AFULL<span class="pc">PC</span>
+                <div class="contenedor-log">
+                    <div class="afull">AFULL<span class="pc">PC</span></div>
                     <p class="st">Soluciones técnologicas</p>
                 </div>
                 <div class="menu-desk">
