--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <meta property="og:title" content="AFULLPC">
         <meta property="og:description" content="Soluciones Tecnológicas: Encuentra asesoramiento, servicio técnico presencial y remoto, así como productos tecnológicos disponibles en nuestra sección de ventas.">
-        <meta property="og:image" content="/img/logo/LOGO IG.png">
+        <meta property="og:image" content="/img/logo/Logo profile google business.png">
         <meta property="og:url" content="https://www.afullpc.com/">
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="AFULLPC">
