--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords"
         content="tecnología, productos tecnológicos, gadgets, electrónica, computación, asesoramiento, servicio técnico, remoto">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, nofollow">
     <link rel="icon" type="image/png" href="/img/flaticon/Flaticon afullpc.png">
     <link rel="canonical" href="https://www.afullpc.com/">
     <link rel="stylesheet" href="./css/index.css" />
