--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AFULLPC</title>
+    <meta name="description"
+        content="Soluciones Tecnológicas: Encuentra asesoramiento, servicio técnico presencial y remoto, así como productos tecnológicos disponibles en nuestra sección de ventas">
     <meta name="keywords"
         content="tecnología, productos tecnológicos, gadgets, electrónica, computación, asesoramiento, servicio técnico, remoto">
     <meta name="robots" content="index, follow">
-    <link rel="icon" type="image/png" href="/img/flaticon/Flaticon afullpc.png">
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/xml/sitemap.xml">
+    <link rel="icon" type="image/png" href="/img/flaticon/Flaticon afullpc.png"> 
     <link rel="canonical" href="https://www.afullpc.com/">
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,9 +20,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
-    <title>AFULLPC</title>
-    <meta name="description"
-        content="Soluciones Tecnológicas: Encuentra asesoramiento, servicio técnico presencial y remoto, así como productos tecnológicos disponibles en nuestra sección de ventas">
 
     <meta property="og:url" content="https://www.afullpc.com/">
     <meta property="og:image" content="/img/logo/Logo profile google business.png">
@@ -61,7 +62,7 @@
             <a target="_blank" href="https://wa.link/tortc3">
                 <div class="services1">
                     <div class="container-img">
-                        <img class="services-icon1" src="./img/icon servicios/Asesoramiento.png" alt="">
+                        <img class="services-icon1" src="./img/icon servicios/Asesoramiento.png" alt="Asesoramiento">
                     </div>
                     <div class="services-p1">
 
@@ -73,7 +74,7 @@
 
             <div class="services2">
                 <div class="container-img">
-                    <img class="services-icon2" src="./img/icon servicios/Servicio tecnico.png" alt="">
+                    <img class="services-icon2" src="./img/icon servicios/Servicio tecnico.png" alt="Servicio técnico">
                 </div>
                 <div class="services-p2">
                     <p class="pa2">Servicio técnico</p>
@@ -82,7 +83,7 @@
             <a target="_blank" href="https://wa.me/c/5493516650057">
                 <div class="services3">
                     <div class="container-img">
-                        <img class="services-icon3" src="./img/icon servicios/Ventas.png" alt="">
+                        <img class="services-icon3" src="./img/icon servicios/Ventas.png" alt="Ventas">
                     </div>
                     <div class="services-p3">
                         <p class="pa3">Ventas</p>
