--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         content="tecnología, productos tecnológicos, gadgets, electrónica, computación, asesoramiento, servicio técnico, remoto">
     <meta name="robots" content="index, follow">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/xml/sitemap.xml">
-    <link rel="icon" type="image/png" href="/img/flaticon/Flaticon afullpc.png"> 
+    <link rel="icon" type="image/png" href="/img/flaticon/flaticon redondo.png"> 
     <link rel="canonical" href="https://www.afullpc.com/">
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
