--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="og:image" content="/img/logo/LOGO IG.png">
     <meta property="og:title" content="AFULLPC">
     <meta property="og:description"
-        content="Soluciones Tecnológicas: Encuentra asesoramiento, servicio técnico presencial y remoto, así como productos tecnológicos disponibles en nuestra sección de ventas">
+        content="Soluciones Tecnológicas: asesoramiento, servicio técnico, ventas">
 
 
 
