--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         rel="stylesheet">
 
     <meta property="og:url" content="https://www.afullpc.com/">
-    <meta property="og:image" content="/img/logo/LOGO IG.png">
+    <meta property="og:image" content="/img/logo/Logo profile google business.png">
     <meta property="og:title" content="AFULLPC">
     <meta property="og:description"
-        content="Soluciones Tecnológicas: asesoramiento, servicio técnico, ventas">
+        content="Soluciones Tecnológicas">
 
 
 
