--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="logo">
                 <div class="contenedor-log">
                     <div class="afull">AFULL<span class="pc">PC</span></div>
-                    <p class="st">Soluciones técnologicas</p>
+                    <p class="st">Soluciones tecnológicas</p>
                 </div>
                 <div class="menu-desk">
                     <div class="inicio">Inicio</div>
