--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AFULLPC</title>
     <meta name="description"
-        content="Soluciones Tecnológicas: Encuentra asesoramiento, servicio técnico presencial y remoto, así como productos tecnológicos disponibles en nuestra sección de ventas">
+        content="Soluciones Tecnológicas: Encuentra asesoramiento, servicio técnico híbrido, así como productos tecnológicos disponibles en nuestra sección de ventas">
     <meta name="keywords"
         content="tecnología, productos tecnológicos, gadgets, electrónica, computación, asesoramiento, servicio técnico, remoto">
     <meta name="robots" content="index, follow">
