update responsive movile

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!--Contenido-->
 
-    <main class="main">
+    <!--<main class="main">-->
         <div class="container-the-services">
             <a target="_blank" href="https://wa.link/tortc3">
                 <div class="services1">
@@ -95,7 +95,7 @@
             </a>
         </div>
 
-    </main>
+    <!--</main>-->
 
     <!--<div class="main-2">
         <div class="container-2">
